@@ -1,3 +1,8 @@
+2006-01-24  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
+
+	PR c++/25552
+	* g++.dg/parse/dtor8.C: New test.
+
 2006-01-23  Eric Botcazou  <ebotcazou@adacore.com>
 
 	PR ada/20548
